<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtCourseDetail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/course"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtInstructor"
        android:layout_width="364dp"
        android:layout_height="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text="@string/instructor"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCourseDetail" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="240dp"
        android:layout_height="25dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/time"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btnRemove"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSeatsAvailable" />

    <TextView
        android:id="@+id/txtSeatsAvailable"
        android:layout_width="180dp"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/seats_available"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInstructor" />

    <TextView
        android:id="@+id/txtWaitlist"
        android:layout_width="110dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="4dp"
        android:text="@string/txtwaitlist"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtSeatsAvailable"
        app:layout_constraintTop_toBottomOf="@+id/txtInstructor" />

    <Button
        android:id="@+id/btnRemove"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/remove"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWaitlist" />
</android.support.constraint.ConstraintLayout>
